--- a/Clash_DIY/Config/ACL4SSR_Online_Full_NoReject.ini
+++ b/Clash_DIY/Config/ACL4SSR_Online_Full_NoReject.ini
@@ -11,6 +11,9 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+;规则来源 Rex-Yeung
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/Rex-Yeung/ACL4SSR/master/Clash_DIY/Ruleset/GFWPlus.list
+;规则来源ACL4SSR 感谢
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
