--- a/Clash_DIY/Config/Rex_Online_Own.ini
+++ b/Clash_DIY/Config/Rex_Online_Own.ini
@@ -21,10 +21,10 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ;谷歌在中国能直连的网址列表
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 
-;流媒体控制 国外：奈菲、迪士尼、油管、巴哈姆特等 国内：哔哩哔哩、爱奇艺、优酷、腾讯、乐视、MOO
-ruleset=🎥 NETFLIX,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🎥 NETFLIX,https://raw.githubusercontent.com/LM-Firefly/Rules/master/Global-Services/Netflix.list
-ruleset=🎥 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+;流媒体控制 国外：奈飞、迪士尼、油管、巴哈姆特等 国内：哔哩哔哩、爱奇艺、优酷、腾讯、乐视、MOO
+ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/LM-Firefly/Rules/master/Global-Services/Netflix.list
+ruleset=🎥 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -64,22 +64,21 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]⚡ 专线节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]⚡ 专线节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🎮 游戏节点
-custom_proxy_group=🎥 NETFLIX`select`[]🎥 流媒体解锁`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎥 YouTube`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
+custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🎮 游戏节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🎥 媒体解锁
+custom_proxy_group=🎥 油管视频`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`(蒙古)
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
 custom_proxy_group=🎯 下载控制`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点
 custom_proxy_group=🎮 游戏节点`select`(游戏|Game|game|加速)|(专线|IEPL|IPLC)|(🇹🇷|TR|土耳其|🇦🇷|AR|阿根廷)
-custom_proxy_group=🎥 流媒体解锁`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
+custom_proxy_group=🎥 媒体解锁`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=⚡ 专线节点`url-test`(IEPL|IPLC|专线)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(🇭🇰|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾节点`url-test`(🇹🇼|台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
