更新下载控制

--- a/Clash_DIY/Config/Rex_Online_Full.ini
+++ b/Clash_DIY/Config/Rex_Online_Full.ini
@@ -64,6 +64,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 ;下载控制（BT下载）
+ruleset=🎯 下载控制,https://raw.githubusercontent.com/Rex-Yeung/ACL4SSR/master/Clash_DIY/Ruleset/BTDownload.list
 ruleset=🎯 下载控制,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PrivateTracker.list
 
 ;放行国内网站
