增加国内直连节点单独选择

--- a/Clash_DIY/Config/Rex_Online_Own.ini
+++ b/Clash_DIY/Config/Rex_Online_Own.ini
@@ -74,7 +74,7 @@ custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🚀 手动切
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=🎯 下载控制`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国`(✡)
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`(成都|辽宁|长沙|深圳)
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=🎮 游戏节点`select`(游戏|Game|game|加速)|(专线|IEPL|IPLC)|(🇹🇷|TR|土耳其|🇦🇷|AR|阿根廷)
 custom_proxy_group=🎥 媒体解锁`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
