--- a/Clash_DIY/Config/Rex_Online_Own.ini
+++ b/Clash_DIY/Config/Rex_Online_Own.ini
@@ -64,7 +64,8 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]⚡ 专线节点`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国`[]DIRECT
+custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(王|星)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🎮 游戏节点`[]🚀 节点选择`[]🚀 手动切换
@@ -78,7 +79,8 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=🎮 游戏节点`select`(游戏|Game|game|加速)|(专线|IEPL|IPLC)|(🇹🇷|TR|土耳其|🇦🇷|AR|阿根廷)
 custom_proxy_group=🎥 媒体解锁`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=⚡ 专线节点`url-test`(IEPL|IPLC|专线)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚡ 高级节点`url-test`(IEPL|IPLC|专线|中转)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚡ 省流节点`url-test`(王|星|地球|月球|太阳)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 直隶总督区`url-test`(成都|辽宁|长沙|深圳)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香江行政区`url-test`(🇭🇰|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 澎湖巡检司`url-test`(🇹🇼|台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
