--- a/Clash_DIY/Config/Rex_Online_Own.ini
+++ b/Clash_DIY/Config/Rex_Online_Own.ini
@@ -65,7 +65,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]⚡ 高级节点`[]⚡ 省流节点`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`(^(?!.*(qidian|奇点)).*)
+custom_proxy_group=🚀 手动切换`select`(^(?!.*(qidian|奇点|重置|剩余|到期)).*)
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🚀 手动切换`[]⚡ 高级节点`[]⚡ 省流节点`[]🎯 全球直连`[]🇭🇰 香江行政区`[]🇨🇳 澎湖巡检司`[]🇻🇳 安南布政司`[]🇸🇬 旧港宣慰司`[]🇯🇵 东洋领事馆`[]🇺🇲 东洲众合国
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🎮 游戏节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🎥 媒体解锁
@@ -87,7 +87,7 @@ custom_proxy_group=🇻🇳 安南布政司`url-test`(🇻🇳|越南|VN|Vietnam
 custom_proxy_group=🇸🇬 旧港宣慰司`url-test`(🇸🇬|新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 东洋领事馆`url-test`(🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`(🇰🇷|KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 东洲众合国`url-test`(🇺🇲|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=♻️ 自动测试`url-test`(^(?!.*(qidian|奇点)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动测试`url-test`(^(?!.*(qidian|奇点|重置|剩余|到期)).*)`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
