去除错误的香港中转分流

--- a/Clash_DIY/Config/Rex_Online_Own.ini
+++ b/Clash_DIY/Config/Rex_Online_Own.ini
@@ -81,7 +81,7 @@ custom_proxy_group=🎥 媒体解锁`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 custom_proxy_group=⚡ 高级节点`url-test`(IEPL|IPLC|专线|中转)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⚡ 省流节点`url-test`(王|星|地球|月球|太阳)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 直隶总督区`url-test`(成都|辽宁|长沙|深圳)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香江行政区`url-test`(^(?!.*(海港)).*)(🇭🇰|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香江行政区`url-test`(^(?!.*(海港|美国|韩国|法国|印度|加拿大|越南)).*)(🇭🇰|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 澎湖巡检司`url-test`(🇹🇼|台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 安南布政司`url-test`(🇻🇳|越南|VN|Vietnam)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 旧港宣慰司`url-test`(🇸🇬|新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
